# manufacture-reporting

./: .copier-answers.yml  .pre-commit-config.yaml  .travis.yml  README.md  oca_dependencies.txt
base_manufacture/: README.rst  __manifest__.py
mrp_bom_current_stock/: README.rst  __init__.py  __manifest__.py
mrp_bom_fixed_quantity/: __manifest__.py
mrp_bom_matrix_report/: README.rst  __init__.py  __manifest__.py
mrp_bom_structure_html/: README.rst  __manifest__.py
mrp_bom_structure_report/: README.rst  __manifest__.py
mrp_bom_structure_report_level_1/: README.rst  __init__.py  __manifest__.py  __openerp__.py
mrp_bom_structure_xls/: README.rst  __openerp__.py
mrp_bom_structure_xlsx/: README.rst  __init__.py  __manifest__.py  __openerp__.py
mrp_bom_structure_xlsx_level_1/: README.rst  __init__.py  __manifest__.py  __openerp__.py
mrp_flattened_bom_xlsx/: README.rst  __init__.py  __manifest__.py
mrp_flattened_bom_xlsx_direct_materials_cost/: README.rst  __manifest__.py
mrp_flattened_bom_xlsx_labour_cost/: README.rst  __manifest__.py
mrp_flattened_bom_xlsx_subcontracting_cost/: README.rst  __manifest__.py
mrp_operations_webkit/: __init__.py  __openerp__.py  mrp_operations_report.xml
mrp_order_report_product_barcode/: README.rst  __init__.py  __manifest__.py
mrp_order_report_stock_location/: README.rst  __manifest__.py
mrp_repair_layout/: README.rst  __openerp__.py
mrp_repair_partner_language_report/: README.rst  __openerp__.py  mrp_repair_report.xml
mrp_repair_webkit/: __init__.py  (+2 more)
setup/_metapackage/: VERSION.txt  pyproject.toml  setup.py
(+211 files in other folders)
