[project]
name = "odoo-addons-oca-manufacture-reporting"
version = "17.0.20240422.0"
dependencies = [
    "odoo-addon-mrp_bom_structure_xlsx>=17.0dev,<17.1dev",
    "odoo-addon-mrp_bom_structure_xlsx_level_1>=17.0dev,<17.1dev",
    "odoo-addon-mrp_flattened_bom_xlsx>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
